--- a/LESS/about.less
+++ b/LESS/about.less
@@ -29,6 +29,7 @@
         a{
             i{
                 font-size: 10rem;
+                color: white;
 
                 @media @desktop {
                     font-size: 5rem
