--- a/LESS/about.less
+++ b/LESS/about.less
@@ -7,7 +7,8 @@
         .flexDisplay(column, space-around, center);
         width: 80%;
         height: 35vh;
-        background-color:rgb(141, 135, 135);
+        background-image: url("../images/pic03.jpg");
+        background-size: cover;
         border-radius: 10px;
 
 
