--- a/LESS/homepage.less
+++ b/LESS/homepage.less
@@ -101,7 +101,8 @@ table {
         .flexDisplay(column, space-around, center);
         width: 80%;
         height: 30vh;
-        background-color:rgb(141, 135, 135);
+        background-image: url("../images/pic03.jpg");
+        background-size: cover;
         border-radius: 10px;
 
         @media @mobile{
