--- a/LESS/homepage.less
+++ b/LESS/homepage.less
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 body {
     line-height: 1;
     background-color: rgb(37, 33, 33);
+    font-family: 'Roboto Mono', monospace;  
 }
 ol, ul {
 	list-style: none;
