--- a/CSS/index.css
+++ b/CSS/index.css
@@ -107,6 +107,7 @@ section {
 body {
   line-height: 1;
   background-color: #252121;
+  font-family: 'Roboto Mono', monospace;
 }
 ol,
 ul {
@@ -146,11 +147,11 @@ table {
 .header .nav a {
   text-decoration: none;
   color: white;
-  font-size: 2rem;
+  font-size: 0.5rem;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .header .nav a {
-    font-size: 1.25rem;
+    font-size: 1rem;
   }
 }
 .imgContainer {
@@ -171,15 +172,14 @@ table {
   }
 }
 .introContainer {
-  padding-top: 5vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 30vh;
+  height: 25vh;
   width: 100%;
 }
-@media (min-width: 576px) {
+@media (min-width: 768px) {
   .introContainer {
     height: 20vh;
   }
@@ -190,23 +190,23 @@ table {
   justify-content: space-around;
   align-items: center;
   width: 80%;
-  height: 30vh;
+  height: 15vh;
   background-image: url("../images/pic03.jpg");
   background-size: cover;
   border-radius: 10px;
 }
-@media (min-width: 576px) {
+@media (min-width: 768px) {
   .introContainer .backgroundCard {
-    height: 20vh;
+    height: 10vh;
   }
 }
 .introContainer .backgroundCard .intro {
-  font-size: 2rem;
+  font-size: 0.5rem;
   width: 90%;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .introContainer .backgroundCard .intro {
-    font-size: 1.25rem;
+    font-size: 1rem;
   }
 }
 .workContainer {
@@ -214,41 +214,55 @@ table {
   width: 100%;
 }
 .workContainer .card {
-  margin-top: 3.5vh;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  height: 40vh;
+  height: 30vh;
 }
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   .workContainer .card {
     height: 80vh;
   }
 }
 .workContainer .card .iframe {
-  width: 80%;
-  height: 30vh;
+  width: 160%;
+  height: 60vh;
   border-radius: 10px;
+  transform: scale(0.5, 0.5);
 }
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   .workContainer .card .iframe {
-    height: 60vh;
+    height: 75vh;
   }
 }
 .workContainer .card a {
   text-decoration: none;
   color: white;
-  font-size: 2rem;
+  font-size: 0.5rem;
+}
+@media (min-width: 768px) {
+  .workContainer .card a {
+    font-size: 1rem;
+  }
 }
 .aboutContainer {
-  padding-top: 5vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 35vh;
+  height: 50vh;
   width: 100%;
+}
+@media (min-width: 768px) {
+  .aboutContainer {
+    height: 40vh;
+  }
+}
+@media (min-width: 1200px) {
+  .aboutContainer {
+    height: 65vh;
+  }
 }
 .aboutContainer .backgroundCard {
   display: flex;
@@ -256,14 +270,29 @@ table {
   justify-content: space-around;
   align-items: center;
   width: 80%;
-  height: 35vh;
+  height: 40vh;
   background-image: url("../images/pic03.jpg");
   background-size: cover;
   border-radius: 10px;
 }
+@media (min-width: 768px) {
+  .aboutContainer .backgroundCard {
+    height: 30vh;
+  }
+}
+@media (min-width: 1200px) {
+  .aboutContainer .backgroundCard {
+    height: 55vh;
+  }
+}
 .aboutContainer .backgroundCard .about {
-  font-size: 2rem;
   width: 90%;
+  font-size: 0.5rem;
+}
+@media (min-width: 768px) {
+  .aboutContainer .backgroundCard .about {
+    font-size: 1rem;
+  }
 }
 @media (min-width: 992px) {
   .aboutContainer .backgroundCard .about {
@@ -280,7 +309,7 @@ table {
   margin-top: 5vh;
 }
 .artifactsContainer .gitLink a i {
-  font-size: 10rem;
+  font-size: 5rem;
   color: white;
 }
 @media (min-width: 992px) {
@@ -296,9 +325,14 @@ table {
   height: 30vh;
   width: 100%;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .contactContainer {
-    padding-top: 5vh;
+    height: 15vh;
+  }
+}
+@media (min-width: 1200px) {
+  .contactContainer {
+    height: 25vh;
   }
 }
 .contactContainer .email {
@@ -308,22 +342,11 @@ table {
   align-items: center;
   height: 15vh;
 }
-@media (min-width: 768px) {
-  .contactContainer .email {
-    height: 20vh;
-    margin-top: 5vh;
-  }
-}
-@media (min-width: 992px) {
-  .contactContainer .email {
-    height: 40vh;
-  }
-}
 .contactContainer .email i {
-  font-size: 10rem;
+  font-size: 5rem;
   color: white;
 }
 .contactContainer .email p {
   color: white;
-  font-size: 2rem;
+  font-size: 1rem;
 }
