--- a/LESS/contact.less
+++ b/LESS/contact.less
@@ -3,9 +3,14 @@
     height: 30vh;
     width: 100%;
 
-   @media @desktop{
-       padding-top:5vh;
-   }
+    @media @tablet{
+        height: 15vh;
+    }
+
+    @media @xldesktop{
+        height: 25vh;
+    }
+
     
 
 
@@ -13,23 +18,14 @@
         .flexDisplay(column, space-around, center);
         height: 15vh;
 
-        @media @tablet{
-            height: 20vh;
-            margin-top: 5vh;
-        }
-
-        @media @desktop{
-            height: 40vh;
-        }
-
         i{
-            font-size: 10rem;
+            font-size: 5rem;
             color: white;
         }
 
         p{
             color: white;
-            font-size: 2rem;
+            font-size: 1rem;
         }
     }
 }
