--- a/LESS/variables.less
+++ b/LESS/variables.less
@@ -2,6 +2,6 @@
 @mobile: ~"(min-width: 576px)";
 @tablet: ~"(min-width: 768px)";
 @desktop: ~"(min-width: 992px)";
-@xldesktop: ~"(min-width: 1200px";
+@xldesktop: ~"(min-width: 1200px)";
 
 
