changed nav button size

--- a/LESS/homepage.less
+++ b/LESS/homepage.less
@@ -55,13 +55,13 @@ table {
     .flexDisplay(row, space-evenly, center);
     .nav{
         .flexDisplay(row, space-evenly, center);
-        width: 50%;
+        width: 75%;
         height: 5vh;
 
         a{
             text-decoration: none;
             color: white;
-            font-size: .75rem;
+            font-size: 1rem;
 
             @media @tablet{
                 font-size: 1rem;
