--- a/LESS/work.less
+++ b/LESS/work.less
@@ -26,7 +26,7 @@
         a{
             text-decoration: none;
             color: white;
-            font-size: .75rem;
+            font-size: 1rem;
 
             @media @tablet{
                 font-size: 1rem;
